--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 
+/* stylize overall page */
+
+body {
+    font-family: "Source Sans Pro";
+    background-color: #eee;
+}
+
 .newspaper-container {
     margin: 40px 100px 40px 100px;
     background-color: white;
@@ -10,6 +17,13 @@
     padding: 20px;
 }
 
+main {
+    padding-bottom: 1em;
+    border-bottom: 1px solid #eee;
+}
+
+/* make images uniform (I know it's bad to set to pixels, I should resize the images) */
+
 img {
     display: block;
     margin: auto;
@@ -17,10 +31,7 @@ img {
     height: 150px;
 }
 
-body {
-    font-family: "Source Sans Pro";
-    background-color: #eee;
-}
+/* stylize text */
 
 p.copy {
     text-align: justify;
@@ -42,7 +53,7 @@ h2 {
     font-family: "Roboto Slab";
     margin-bottom: 0;
 }
-
+    
 h4 {
     color: black;
     font-family: "Roboto Slab";
@@ -53,7 +64,13 @@ h5 {
     font-family: "Abril Fatface";
 }
 
+/* top navigation */
+
 nav {
+    position: sticky;
+    top: 0px;
+    z-scale: 2;
+    background-color: white;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
     text-align: center;
@@ -75,32 +92,7 @@ nav li {
     padding: 0px 10px 0px 10px;
 }
 
-main {
-    padding-bottom: 1em;
-    border-bottom: 1px solid #eee;
-}
-
-footer {
-        border-top: 1px solid #eee;
-        border-bottom: 1px solid #eee;
-        text-align: center;
-    }
-    
-footer a {
-        color: #777;
-        text-decoration: none;
-    }
-    
-footer ul {
-        list-style-type: none;
-        padding: 0;
-    
-        }
-    
-footer li {
-        display: inline-block;
-        padding: 0px 10px 0px 10px;
-    }
+/* display articles in grid layout */
 
 .more-articles {
     display: grid;
@@ -134,6 +126,29 @@ footer li {
     grid-row: 2;
 }
 
+/* footer */
+
+footer {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    text-align: center;
+}
+
+footer a {
+    color: #777;
+    text-decoration: none;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+
+    }
+
+footer li {
+    display: inline-block;
+    padding: 0px 10px 0px 10px;
+}
 
 
 
